<resources>
    <string name="app_name">PitShop</string>
    <string name="action_settings">Settings</string>
    <string name="login_skip">Skip this step  -></string>
    <string name="login_register">Register</string>
    <string name="login_signin">Sign In</string>
    <string name="emailid">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_register_">PitShop - Register</string>
    <string name="register_name_first">First Name</string>
    <string name="register_name_last">Last Name</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="register_carChoice">Which class are you?</string>
    <string name="register_submit">Get Your New Ride</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="php_url">http://purchasecars.site88.net/</string>
    <string name="field_required">This field is required</string>
    <string name="invalid_email">Please enter a valid email id</string>
    <string name="password_mismatch">Sorry, the passwords do not match</string>
    <string name="register_success">Registration Successful</string>
    <string name="password_incorrect">Are you sure you got the right keys? Please try again.</string>
    <string name="login_success">Login Success</string>
    <string name="login_success_message">We are now starting your car.</string>
    <string name="login_failed">Login Failed</string>
    <string name="dismiss">Dismiss</string>
    <string name="trending">WHAT\'S TRENDING</string>
    <string name="launches">LAUNCHES</string>
    <string name="blog">MOTO BLOG</string>
    <string name="popularnewcars">POPULAR NEW CARS</string>
    <string name="popularusedcars">POPULAR USED CARS</string>
    <string name="popularcomparisons">POPULAR USED CARS</string>
    <string name="menu_new">New Cars</string>
    <string name="menu_used">Used Cars</string>
    <string name="menu_vintage">Vintage Cars</string>
    <string name="menu_more">More</string>
    <string name="title_activity_list_display">ListDisplay</string>
    <string name="cart">Your Garage</string>
    <string name="Search">Search</string>
    <string name="title_activity_home2">HomeActivity2</string>

    <string name="menu_compare">Compare Cars</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_cart">Garage</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_car_view">PitShop</string>
    <string name="title_activity_new_car">New Cars</string>
    <string name="navigation_share">Share</string>
    <string name="navigation_send">Send</string>
    <string name="car_not_found">Sorry, cannot find the ride you\'re looking for.</string>
    <string name="search_default_text">No results found</string>
    <string name="buy">Get This Ride</string>
    <string name="variant">Select Variant</string>
    <string name="check_list">checklist</string>
    <string name="text_list">textlist</string>
    <string name="variant_list">variantlist</string>
    <string name="title_list">title</string>
    <string name="title_activity_compare">CompareActivity</string>
    <string name="brand_search">Search By Brand</string>
    <string name="fuel_search">Search By Fuel Type</string>
    <string name="body_search">Search By Body Type</string>
    <string name="transmission_search">Search By Transmission</string>
    <string name="price_search">Search By Price</string>
    <string name="fuel_petrol">Petrol</string>
    <string name="fuel_diesel">Diesel</string>
    <string name="fuel_cng">CNG</string>
    <string name="fuel_lpg">LPG</string>
    <string name="fuel_electric">Electric</string>
    <string name="fuel_hybrid">Hybrid</string>
    <string name="body_hatch_back">Hatch Back</string>
    <string name="body_sedan">Sedan</string>
    <string name="body_suv">SUV</string>
    <string name="body_muv">MUV</string>
    <string name="body_van">Van</string>
    <string name="body_coupe">Coupe</string>
    <string name="body_convertible">Convertible</string>
    <string name="body_crossover">Crossover</string>
    <string name="transmission_auto">Automatic</string>
    <string name="transmission_manual">Manual</string>
    <string name="title_activity_vintage_cars">VintageCarsActivity</string>
</resources>
