<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.miraclemakers.pitshop.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:orientation="vertical"
    android:id="@+id/login_form"
    android:background="@drawable/login_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:id="@+id/image_layout_login">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo_title"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="40dp"
        android:id="@+id/detail_layout_login">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:inputType="textEmailAddress"
            android:hint="@string/emailid"
            android:id="@+id/emailid_login"
            android:background="@color/greyTransparent"
            android:drawableLeft="@drawable/ic_person_black_36dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/password_login"
            android:layout_below="@+id/emailid_login"
            android:background="@color/greyTransparent"
            android:drawableLeft="@drawable/ic_lock_black_36dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:id="@+id/signin_login"
            android:text="@string/login_signin"
            android:textColor="@color/backgroundWhite"
            android:background="@color/textBlack"
            android:layout_below="@+id/password_login"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_skip"
            android:layout_marginTop="20dp"
            android:id="@+id/skip_login"
            android:layout_below="@+id/signin_login"
            android:gravity="end|left"
            android:textSize="6pt"
            android:layout_alignLeft="@+id/signin_login" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:layout_marginTop="20dp"
            android:id="@+id/register_login"
            android:layout_below="@+id/signin_login"
            android:layout_alignRight="@+id/signin_login"
            android:textSize="6pt"/>
    </RelativeLayout>

</LinearLayout>
