<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nihalpradeep.carapp.Register_Activity"
    tools:showIn="@layout/activity_register"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/backGroundGrey"
    android:id="@+id/register_form">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/register_name_first"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/textBlack"
                android:layout_marginBottom="4dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundWhite"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:id="@+id/register_first_name"
                android:inputType="textCapWords" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/register_name_last"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/textBlack"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundWhite"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:id="@+id/register_last_name"
                android:inputType="textCapWords" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/emailid"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/textBlack"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundWhite"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:id="@+id/register_emailid"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/password"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/textBlack"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundWhite"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:id="@+id/register_password"
                android:inputType="textPassword"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/confirmpassword"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/textBlack"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundWhite"
                android:layout_marginBottom="36dp"
                android:layout_marginTop="4dp"
                android:id="@+id/register_confirm_password"
                android:inputType="textPassword"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:layout_marginTop="4dp"
                android:background="@color/backgroundGreyDark"
                android:drawableLeft="@drawable/ic_vpn_key_black_36dp"
                android:text="@string/register_submit"
                android:id="@+id/register_button"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
