<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.miraclemakers.pitshop.NewCarActivity"
    tools:showIn="@layout/app_bar_new_car"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/textBlack"
        android:background="@drawable/border_creator"
        android:text="@string/brand_search"
        android:paddingBottom="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp"
        android:id="@+id/new_car_brand_text"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_car_brand_list"
        android:visibility="gone">
    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/textBlack"
        android:background="@drawable/border_creator"
        android:text="@string/fuel_search"
        android:paddingBottom="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp"
        android:id="@+id/new_car_fuel_text"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_car_fuel_list"
        android:visibility="gone">
    </ListView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/textBlack"
        android:background="@drawable/border_creator"
        android:text="@string/body_search"
        android:paddingBottom="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp"
        android:id="@+id/new_car_body_text"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_car_body_list"
        android:visibility="gone">
    </ListView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/textBlack"
        android:background="@drawable/border_creator"
        android:text="@string/transmission_search"
        android:paddingBottom="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp"
        android:id="@+id/new_car_transmission_text"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_car_transmission_list"
        android:visibility="gone">
    </ListView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/textBlack"
        android:background="@drawable/border_creator"
        android:text="@string/price_search"
        android:paddingBottom="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp"
        android:id="@+id/new_car_priceview_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/new_car_seekbar_layout"
        android:visibility="gone">
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_car_seekBar"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_car_price_text"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_car_price_button"
            android:text="Set Price"/>
    </LinearLayout>

</LinearLayout>
